# arrayfire-benchmarks

./: .gitignore  CMakeLists.txt  README.md  bench.plot
src/: af_benchmark.cpp  af_console_reporter.cpp  af_conv_relu_pool.cpp  af_json_reporter.cpp  anisotropic_smoothing.cpp  approx1.cpp  arrayfire_benchmark.h  batched_matmul.cpp  cudnn_conv_relu_pool.cpp  fft.cpp  indexing.cpp  iterative_deconvolution.cpp  jit.cpp  matmul.cpp  mean.cpp  nearest_neighbor.cpp  norm.cpp  pi.cpp  randu.cpp  reduce.cpp  regions.cpp  rotate.cpp  sort.cpp  stdev.cpp  tile.cpp  topk.cpp  unified.cpp
